fixed contrast issues

--- a/main.css
+++ b/main.css
@@ -184,17 +184,9 @@ ul {
 .overlay {
     position: absolute;
     left: 0;
-    bottom: 0;
-    top: 0;
     right: 0;
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.8);
+    bottom: -20px;
     color: #f1f1f1;
-    /* width: 100%; */
-    transition: 2s ease;
-    opacity: 0;
-  
-    color: white;
     font-size: 20px;
     padding: 23% 0 0 0;
     text-align: center;
@@ -203,10 +195,10 @@ ul {
 
 .description{
     font-size: 16px;
-    color: #AD99AA;
+    color: #DAD3D7;
     padding: 20px;
     font-family: 'Nanum Gothic';
-
+    text-align: left;
 }
 
 .logo {
@@ -233,11 +225,13 @@ nav.burger {
     max-width: fit-content;
     margin-top: 3px;
     overflow: hidden;
-    background-color: #4E3459;
+    background-color: black;
     padding: 5px;
     z-index: 1;
     position: absolute;
+    top: 40px;
     float: left;
+    padding: 10px;
 }
 
 button:focus{
@@ -253,6 +247,7 @@ button:focus{
     padding: 5px;
     text-decoration: none;
     font-size: 17px;
+    color: #DAD3D7;
 }
 
 .barbutton{
@@ -276,6 +271,10 @@ button:focus{
     justify-content: center;
     padding: 5px 5px 1px;
     border-radius: 3px;
+}
+
+.resume{
+    text-decoration: none;
 }
 
 .footer{
@@ -307,6 +306,17 @@ button:focus{
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+    }
+
+    .overlay{
+        transition: 2s ease;
+        opacity: 0;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        top: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0.8);
     }
 
     .screenshot {
